--- a/src/components/CustomCard/cardStyles.css
+++ b/src/components/CustomCard/cardStyles.css
@@ -6,21 +6,26 @@
   padding: 1rem 3rem;
 }
 .card-box {
-  margin: 1rem;
-  margin-bottom: 2rem;
-}
-
-.swiper-container {
-  height: 270px;
-  width: 270px;
+  margin: 100px;
+  margin-top: 200px;
+  width: 350px;
+  height: auto;
+  /* background: gray; */
+  padding: 10px;
+  position: relative;
   overflow: hidden;
+  border-radius: 10%;
 }
 
 .card-img {
-  height: 270px;
-  width: 270px;
-  object-fit: cover;
-  border-radius: 0.5rem;
+  height: 310px;
+  width: 100%;
+  border-radius: 10%;
+  transition: transform 0.3s, filter 0.3s;
+}
+.card-img:hover {
+  transform: scale(1.1);
+  filter: brightness(50%);
 }
 
 .card-info-flex {
@@ -35,27 +40,28 @@
   gap: 0.25rem;
 }
 
-.card-box .swiper-pagination-bullet-active {
-  background-color: var(--white) !important;
+.cards-flex {
+  padding: 0px;
 }
 
-@media only screen and (max-width: 1000px) {
-  .swiper-container,
-  .card-img {
-    height: 400px;
-    width: 40vw;
-  }
+.card-box .hover-buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
 }
 
-@media only screen and (max-width: 800px) {
-  .swiper-container,
-  .card-img {
-    height: 50%;
-    max-height: 400px;
-    width: 90vw;
-  }
+.card-box:hover .hover-buttons {
+  display: block;
+}
 
-  .cards-flex {
-    padding: 0px;
-  }
+.card-button {
+  background-color: white;
+  color: black;
+  padding: 8px 12px;
+  margin: 5px;
+  border: none;
+  cursor: pointer;
+  width: 80px;
 }
