--- a/src/components/FooterM/style.css
+++ b/src/components/FooterM/style.css
@@ -3,7 +3,7 @@
   border-top: 1px solid #e5e5e5;
   padding: 4px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   font-size: 14px;
   z-index: 50;
